--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -183,5 +183,6 @@
     <color name="colorPrimaryDark">#16a085</color>
     <color name="colorAccent">#1abc9c</color>
     <color name="colorAccentLight">#76ffe5</color>
+    <color name="colorAccentDark">#16a085</color>
 
 </resources>
