--- a/app/src/main/res/layout/item_nav_menu.xml
+++ b/app/src/main/res/layout/item_nav_menu.xml
@@ -4,7 +4,6 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/bg_button"
     android:orientation="horizontal"
     android:paddingBottom="@dimen/half_padding"
     android:paddingLeft="@dimen/uni_padding"
@@ -12,8 +11,9 @@
     android:paddingTop="@dimen/half_padding">
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@drawable/bg_button"
         android:gravity="center_vertical">
 
         <ImageView
