optimized RuleParser and rules modification of exist site

--- a/app/src/main/res/layout/activity_add_site.xml
+++ b/app/src/main/res/layout/activity_add_site.xml
@@ -112,7 +112,7 @@
     </RelativeLayout>
 
     <com.github.clans.fab.FloatingActionButton
-        android:id="@+id/fab_add"
+        android:id="@+id/fab_submit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|right"
