--- a/app/src/main/res/layout/view_site_details.xml
+++ b/app/src/main/res/layout/view_site_details.xml
@@ -447,7 +447,7 @@
             android:layout_marginTop="@dimen/half_padding"
             android:textColor="@color/colorPrimaryDark"
             android:textSize="14sp"
-            android:text="图片跳转URL"/>
+            android:text="图片跳转URL（可选）"/>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -486,7 +486,7 @@
             android:layout_marginTop="@dimen/half_padding"
             android:textColor="@color/colorPrimaryDark"
             android:textSize="14sp"
-            android:text="图片缩略图URL"/>
+            android:text="图片缩略图URL（可选）"/>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -573,7 +573,7 @@
             android:layout_marginTop="@dimen/half_padding"
             android:textColor="@color/colorPrimaryDark"
             android:textSize="14sp"
-            android:text="特征码"/>
+            android:text="特征码（可选）"/>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -924,7 +924,7 @@
             android:layout_marginTop="@dimen/half_padding"
             android:textColor="@color/colorPrimaryDark"
             android:textSize="14sp"
-            android:text="图片缩略图URL"/>
+            android:text="图片缩略图URL（可选）"/>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
