--- a/app/src/main/res/layout/item_nav_menu.xml
+++ b/app/src/main/res/layout/item_nav_menu.xml
@@ -1,10 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.balysv.materialripple.MaterialRippleLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
+    app:mrl_rippleOverlay="true"
+    app:mrl_rippleColor="@color/black"
+    app:mrl_rippleAlpha="0.1"
+    app:mrl_rippleDimension="10dp"
+    app:mrl_rippleDuration="250"
+    app:mrl_rippleFadeDuration="75"
+    app:mrl_rippleHover="true"
+    app:mrl_rippleDelayClick="true"
     android:paddingBottom="@dimen/half_padding"
     android:paddingLeft="@dimen/uni_padding"
     android:paddingRight="@dimen/uni_padding"
@@ -34,4 +43,4 @@
             tools:text="E-hentai" />
     </LinearLayout>
 
-</LinearLayout>
+</com.balysv.materialripple.MaterialRippleLayout>
