--- a/app/src/main/res/layout/activity_collection.xml
+++ b/app/src/main/res/layout/activity_collection.xml
@@ -24,7 +24,7 @@
             app:contentScrim="?attr/colorPrimary"
             app:expandedTitleGravity="fill_vertical"
             app:expandedTitleTextAppearance="@style/TextAppearance.AppCompat.Body2"
-            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
+            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
             app:titleEnabled="true">
 
 
@@ -35,6 +35,7 @@
                 android:minHeight="@dimen/collection_app_bar_height"
                 android:adjustViewBounds="true"
                 android:scaleType="centerCrop"
+                android:fitsSystemWindows="true"
                 app:layout_collapseMode="parallax"
                 app:layout_collapseParallaxMultiplier="0.8"
                 android:src="@null" />
@@ -45,6 +46,7 @@
                 android:layout_height="match_parent"
                 android:alpha="0.8"
                 android:background="@color/colorPrimary"
+                android:fitsSystemWindows="true"
                 android:scaleType="fitXY" />
 
             <android.support.v7.widget.Toolbar
@@ -52,6 +54,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/tool_bar_height"
                 android:paddingLeft="-16dp"
+                android:paddingTop="@dimen/status_bar_height"
                 app:contentInsetStart="0dp"
                 app:layout_collapseMode="pin"
                 app:popupTheme="@style/AppTheme.PopupOverlay">
